poster/reserach poster conf uob 2018/ abstract01

--- a/posters/Research_Poster_Conference_UoB/2018/abstract/latex/Makefile
+++ b/posters/Research_Poster_Conference_UoB/2018/abstract/latex/Makefile
@@ -8,7 +8,7 @@ version := alpha1
 #
 
 
-FILENAME = abstract
+FILENAME = abstract01
 LATEX = pdflatex -shell-escape -interaction=nonstopmode -file-line-error
 BIB = bibtex
 
